--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-requests
-pandas
-lxml
-beautifulsoup4
-PyGithub
-python-dotenv
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
+idna==3.10
+requests==2.32.3
+soupsieve==2.6
+urllib3==2.2.3
